# Code

./: .gitignore
comparing_algorithms/cluster_centroids/: CMakeLists.txt  run.sh
comparing_algorithms/cluster_centroids/inc/: cluster_centroids.h  k_means_pp.h
comparing_algorithms/cluster_centroids/src/: cluster_centroids.cpp  k_means_pp.cpp  main.cpp
comparing_algorithms/edited_nearest_neighbors/: CMakeLists.txt  run.sh
comparing_algorithms/edited_nearest_neighbors/inc/: edited_nearest_neighbors.h
comparing_algorithms/edited_nearest_neighbors/src/: edited_nearest_neighbors.cpp  main.cpp
comparing_algorithms/entropy_based_undersampling_approach/: CMakeLists.txt
comparing_algorithms/entropy_based_undersampling_approach/inc/: entropy_based_undersampling_approach.h
comparing_algorithms/entropy_based_undersampling_approach/src/: entropy_based_undersampling_approach.cpp  main.cpp
comparing_algorithms/instance_hardness_threshold/: CMakeLists.txt
comparing_algorithms/instance_hardness_threshold/inc/: instance_hardness_threshold.h
comparing_algorithms/instance_hardness_threshold/src/: instance_hardness_threshold.cpp  main.cpp
comparing_algorithms/near_miss_2/: CMakeLists.txt
comparing_algorithms/near_miss_2/inc/: near_miss_2.h
comparing_algorithms/near_miss_2/src/: main.cpp  near_miss_2.cpp
comparing_algorithms/random_under_sampling/: CMakeLists.txt
comparing_algorithms/random_under_sampling/inc/: random_under_sampling.h
comparing_algorithms/random_under_sampling/src/: main.cpp  random_under_sampling.cpp
datasets/blobs-5-fold/: blobs_generator.py  plot_blobs.mlx
datasets/spiral-5-fold_old/: plot_spiral.mlx  spiral_generator.py
inc/: decision_tree_classifier.h  file_operations.h  train_test_split.h  validation.h
proposed/: CMakeLists.txt  run.sh
proposed/inc/: proposed.h  train_test_split.h
proposed/src/: main.cpp  proposed.cpp  train_test_split.cpp
src/: decision_tree_classifier.cpp  train_test_split.cpp  validation.cpp
